--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -17,8 +17,8 @@
    <widget class="QTextEdit" name="outputEdit">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>420</y>
+      <x>-20</x>
+      <y>450</y>
       <width>941</width>
       <height>221</height>
      </rect>
@@ -27,14 +27,14 @@
    <widget class="QPushButton" name="runButton">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>400</y>
-      <width>75</width>
-      <height>24</height>
+      <x>290</x>
+      <y>410</y>
+      <width>91</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>run</string>
+     <string>运 行</string>
     </property>
    </widget>
    <widget class="QTreeWidget" name="treeWidget">
@@ -55,8 +55,8 @@
    <widget class="QTextEdit" name="inputEdit">
     <property name="geometry">
      <rect>
-      <x>1250</x>
-      <y>60</y>
+      <x>0</x>
+      <y>10</y>
       <width>941</width>
       <height>381</height>
      </rect>
@@ -66,13 +66,13 @@
     <property name="geometry">
      <rect>
       <x>470</x>
-      <y>400</y>
-      <width>75</width>
-      <height>24</height>
+      <y>410</y>
+      <width>91</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>clean</string>
+     <string>清 空</string>
     </property>
    </widget>
   </widget>
