--- a/login.ui
+++ b/login.ui
@@ -14,11 +14,7 @@
    <string>登录</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">
-	   background-color: #FFFAF0;
-	   border-radius: 15px;
-	   background-color: rgba(255, 255, 255, 128)
-	   border: none;  /* 可选，移除边框 */</string>
+   <string notr="true"/>
   </property>
   <widget class="QLabel" name="titleLabel">
    <property name="geometry">
